<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="edit_message">Enter test messages</string>
    <string name="picture">Start</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="picture_view">test picture show</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_scalar">Scaling Factor</string>
    <string name="pref_description_scalar">Scale down incoming frames to smaller size for better performance.
    </string>
    <string-array name="pref_scalar_list_titles">
        <item>1/8</item>
        <item>1/12</item>
        <item>1/16</item>
        <item>1/24</item>
    </string-array>
    <integer name="default_scalar">12</integer>
    <integer-array name="pref_scalar_list_values">
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>24</item>
    </integer-array>

    <string name="pref_title_area">Searching Area</string>
    <string-array name="pref_area_list_titles">
        <item>Full Screen</item>
        <item>70%</item>
        <item>50%</item>
    </string-array>
    <integer name="default_area">100</integer>
    <integer-array name="pref_area_list_values">
        <item>100</item>
        <item>70</item>
        <item>50</item>
    </integer-array>

    <string name="pref_title_step">Threading Mode</string>
    <string-array name="pref_step_list_titles">
        <item>Power</item>
        <item>Accelerate</item>
        <item>Normal</item>
        <item>Basic</item>
    </string-array>
    <integer name="default_step">16</integer>
    <integer-array name="pref_step_list_values">
        <item>32</item>
        <item>16</item>
        <item>10</item>
        <item>4</item>
    </integer-array>

    <string name="pref_title_period">Command Update Limit</string>
    <string-array name="pref_period_list_titles">
        <item>Fast</item>
        <item>Normal</item>
        <item>Slow</item>
    </string-array>
    <integer name="default_period">100</integer>
    <integer-array name="pref_period_list_values">
        <item>100</item>
        <item>200</item>
        <item>500</item>
    </integer-array>

    <string name="pref_title_step_edit">Threading (Manually)</string>
    <integer name="pref_default_step_edit">10</integer>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Motor -->
    <string name="pref_header_motor">Motor Control</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_center">Reset</string>
    <string name="button_right">Right</string>
    <string name="button_left">Left</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_setting">Settings</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="button_reset">Reset</string>

</resources>
