<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@integer/default_scalar"
        android:entries="@array/pref_scalar_list_titles"
        android:entryValues="@array/pref_scalar_list_values"
        android:key="scalar"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_scalar" />

    <ListPreference
        android:defaultValue="@integer/default_area"
        android:entries="@array/pref_area_list_titles"
        android:entryValues="@array/pref_area_list_values"
        android:key="area"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_area" />

    <ListPreference
        android:defaultValue="@integer/default_period"
        android:entries="@array/pref_period_list_titles"
        android:entryValues="@array/pref_period_list_values"
        android:key="period"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_period" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@integer/default_step"
        android:entries="@array/pref_step_list_titles"
        android:entryValues="@array/pref_step_list_values"
        android:key="step"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_step" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_step_edit"
        android:inputType="numberDecimal"
        android:key="step"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_step_edit" />

</PreferenceScreen>
