<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sample_main_layout">

    <!--<ViewAnimator-->
    <!--android:id="@+id/sample_output"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0px"-->
    <!--android:layout_weight="1">-->

    <!--<ScrollView-->
    <!--style="@style/Widget.SampleMessageTile"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<TextView-->
    <!--style="@style/Widget.SampleMessage"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingLeft="@dimen/horizontal_page_margin"-->
    <!--android:paddingRight="@dimen/horizontal_page_margin"-->
    <!--android:paddingTop="@dimen/vertical_page_margin"-->
    <!--android:paddingBottom="@dimen/vertical_page_margin"-->
    <!--android:text="@string/intro_message2" />-->
    <!--</ScrollView>-->

    <!--<fragment-->
    <!--android:name="com.example.android.common.logger.LogFragment"-->
    <!--android:id="@+id/log_fragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

    <!--</ViewAnimator>-->

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="moveCenter"
        android:text="@string/button_center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_button"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/down_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveRight"
        android:text="@string/button_right"
        app:layout_constraintLeft_toRightOf="@+id/reset_button"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/reset_button"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveUp"
        android:text="@string/button_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/down_button" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveLeft"
        android:text="@string/button_left"
        app:layout_constraintRight_toLeftOf="@+id/reset_button"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/reset_button"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveDown"
        android:text="@string/button_down"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/sample_content_fragment"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sample_content_fragment" />

    <FrameLayout
        android:id="@+id/sample_content_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/down_button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
